--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,5 @@
+#使用gitignore 文件的目的是确保某些不被Git 追踪的文件不被追踪。
+#要停止跟踪当前已被跟踪的文件，可使用git rm --cached 从索引中移除该文件。
+#文件名随后会被添加到 .gitignore 文件中，以防止该文件在以后的提交中被重新引入。
 node_modules
 dist
